# minestodon

./: .gitignore  Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  main.rs  mc.rs  server.rs
src/mc/: entity.rs  handshake.rs  login.rs  net.rs  packet_io.rs  player.rs  pre_login.rs  registry.rs  status.rs  text.rs  world.rs
src/mc/net/: login.rs  packet_io.rs  play.rs  pre_login.rs
src/mc/net/play/: player.rs  setup.rs
