[package]
name = "minestodon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
byteorder = "1.4.3"
enum-iterator = "1.2.0"
fastnbt = "2.3.2"
flate2 = "1.0.25"
lab = "0.11.0"
log = "0.4.17"
num_enum = "0.5.7"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
simplelog = "0.12.0"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
